Initialize Docs repository: https://github.com/MicrosoftDocs/DevRelAXEValidations of branch master

--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -14,6 +14,20 @@
       },
       "build_entry_point": "docs",
       "template_folder": "_themes"
+    },
+    {
+      "docset_name": "DevRelAxeValidations2",
+      "build_source_folder": "CSIDevDocs",
+      "build_output_subfolder": "DevRelAxeValidations2",
+      "locale": "en-us",
+      "monikers": [],
+      "moniker_ranges": [],
+      "open_to_public_contributors": true,
+      "type_mapping": {
+        "Conceptual": "Content"
+      },
+      "build_entry_point": "docs",
+      "template_folder": "_themes"
     }
   ],
   "notification_subscribers": [],
