--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -1,21 +1,5 @@
 {
-  "build_entry_point": "docs",
-  "docsets_to_publish": [
-    {
-      "docset_name": "DevRelAxeValidations",
-      "build_source_folder": "DevRelAxeValidations",
-      "build_output_subfolder": "CSIDevDocs",
-      "locale": "en-us",
-      "monikers": [],
-      "moniker_ranges": [],
-      "open_to_public_contributors": true,
-      "type_mapping": {
-        "Conceptual": "Content"
-      },
-      "build_entry_point": "docs",
-      "template_folder": "_themes"
-    }
-  ],
+  "docsets_to_publish": [],
   "notification_subscribers": [],
   "sync_notification_subscribers": [],
   "branches_to_filter": [],
@@ -32,6 +16,5 @@
   ],
   "branch_target_mapping": {},
   "need_generate_pdf_url_template": false,
-  "targets": {},
-  "need_generate_pdf": false
+  "targets": {}
 }
