--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -41,6 +41,14 @@
       "url": "https://github.com/Microsoft/templates.docs.msft",
       "branch": "master",
       "branch_mapping": {}
+    },
+    {
+      "path_to_root": "samples",
+      "url": "https://github.com/dotnet/samples",
+      "branch": "master",
+      "branch_mapping": {
+        "live": "live"
+      }
     }
   ],
   "branch_target_mapping": {},
