--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -27,6 +27,20 @@
       },
       "build_entry_point": "docs",
       "template_folder": "_themes"
+    },
+    {
+      "docset_name": "DevRelAXEValidationsPPE0",
+      "build_source_folder": "CSIDevDocs",
+      "build_output_subfolder": "DevRelAXEValidationsPPE0",
+      "locale": "en-us",
+      "monikers": [],
+      "moniker_ranges": [],
+      "open_to_public_contributors": true,
+      "type_mapping": {
+        "Conceptual": "Content"
+      },
+      "build_entry_point": "docs",
+      "template_folder": "_themes"
     }
   ],
   "notification_subscribers": [],
@@ -41,14 +55,6 @@
       "url": "https://github.com/Microsoft/templates.docs.msft",
       "branch": "master",
       "branch_mapping": {}
-    },
-    {
-      "path_to_root": "samples",
-      "url": "https://github.com/dotnet/samples",
-      "branch": "master",
-      "branch_mapping": {
-        "live": "live"
-      }
     }
   ],
   "branch_target_mapping": {},
